<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion7">

    <FrameLayout
        android:layout_width="1263dp"
        android:layout_height="957dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundLol"
            android:layout_width="1500dp"
            android:layout_height="950dp"
            android:backgroundTint="#E6E2E2"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/bg2"
            android:soundEffectsEnabled="true"
            app:srcCompat="@drawable/background_landscape" />
    </FrameLayout>
    <Button
        android:id="@+id/btnDroit"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="@font/optimusprinceps"
        android:text="@string/DirDroite"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#FA5757"
        android:fontFamily="@font/optimusprinceps"
        android:text="@string/DirGauch"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="290dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/joke"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewAkali"
        android:layout_width="144dp"
        android:layout_height="147dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/akali_icon"
        android:contentDescription="@string/akali" />

    <ImageView
        android:id="@+id/imageViewAnivia"
        android:layout_width="146dp"
        android:layout_height="144dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/anivia_icon"
        android:contentDescription="@string/anivia" />

    <ImageView
        android:id="@+id/imageViewKled"
        android:layout_width="144dp"
        android:layout_height="149dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAkali"
        app:srcCompat="@drawable/kled_icon"
        android:contentDescription="@string/kled" />

    <ImageView
        android:id="@+id/imageViewGaren"
        android:layout_width="145dp"
        android:layout_height="151dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAnivia"
        app:srcCompat="@drawable/garen_icon"
        android:contentDescription="@string/garen" />

    <ImageView
        android:id="@+id/imageViewHeimer"
        android:layout_width="155dp"
        android:layout_height="152dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGaren"
        app:srcCompat="@drawable/heimer_icon"
        android:contentDescription="@string/heimer" />
</androidx.constraintlayout.widget.ConstraintLayout>