<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion4"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="43dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="1263dp"
        android:layout_height="957dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundLol"
            android:layout_width="1500dp"
            android:layout_height="950dp"
            android:background="#000000"
            android:contentDescription="@string/bg2"
            android:soundEffectsEnabled="true"
            app:srcCompat="@drawable/background_landscape" />
    </FrameLayout>
    <Button
        android:id="@+id/btnDroit"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="@font/optimusprinceps"
        android:text="@string/DirDroite"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#FA5757"
        android:fontFamily="@font/optimusprinceps"
        android:text="@string/DirGauch"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="294dp"
        android:layout_height="58dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="57dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/checkbox4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="232dp"
        android:layout_height="33dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/checkbox3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="296dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/checkbox2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/checkbox1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/lors_d_un_combat"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="174dp"
        android:layout_height="182dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        app:srcCompat="@drawable/voliproud"
        android:contentDescription="@string/voli" />

</androidx.constraintlayout.widget.ConstraintLayout>