<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestion8">
    <FrameLayout
        android:layout_width="1263dp"
        android:layout_height="957dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundLol"
            android:layout_width="1500dp"
            android:layout_height="950dp"
            android:backgroundTint="#E6E2E2"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/bg2"
            android:soundEffectsEnabled="true"
            app:srcCompat="@drawable/background_landscape" />
    </FrameLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="272dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/optimusprincepssemibold"
        android:text="@string/pickStar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGauche"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#FA5757"
        android:fontFamily="@font/optimusprinceps"
        android:text="@string/DirGauch"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDroit"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="@font/optimusprinceps"
        android:text="@string/DirDroite"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="363dp"
        android:layout_height="537dp"
        android:background="#8FFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/bilgewater"
                app:srcCompat="@drawable/bilgewater_pic" />

            <RatingBar
                android:id="@+id/bilgewaterRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/ionia"
                app:srcCompat="@drawable/ionia_pic" />

            <RatingBar
                android:id="@+id/ioniaRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/shurima"
                app:srcCompat="@drawable/shurima_pic" />

            <RatingBar
                android:id="@+id/shurimaRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/noxus"
                app:srcCompat="@drawable/noxus_pic" />

            <RatingBar
                android:id="@+id/noxusRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/demacia"
                app:srcCompat="@drawable/demacia_pic" />

            <RatingBar
                android:id="@+id/demaciaRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/targon"
                app:srcCompat="@drawable/targon_pic" />

            <RatingBar
                android:id="@+id/targonRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/piltover"
                app:srcCompat="@drawable/piltover_pic" />

            <RatingBar
                android:id="@+id/piltoverRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/freljord"
                app:srcCompat="@drawable/freljord_pic" />

            <RatingBar
                android:id="@+id/freljordRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/bandle"
                app:srcCompat="@drawable/bandle_pic" />

            <RatingBar
                android:id="@+id/bandleRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:indeterminate="false"
                android:numStars="5" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>